# reimpl

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  CODE_ISSUES.md  README.md  claude_code_advice.md  download_flower_dataset.py  exp.ipynb  pyproject.toml  test_renderer.py  test_visualization.py
.devcontainer/: Dockerfile  buildspec.yml  devcontainer.json  post-create-commands.sh  terraform.tf
.github/workflows/: docker-image.yml
agent_instructions/languages/python/: README.md  cli_parsing.md  documentation.md  exceptions.md  new_project_setup.md  subprocess.md  testing.md  types_and_imports.md  validation.md
examples/: visualization_demo.py
notes/: tasks.md
reimpl_a_gn/: __init__.py  random.py
reimpl_a_gn/common/: modules.py
reimpl_a_gn/dataset/: common.py
reimpl_a_gn/dataset/gis/synthetic_nerf_dataset/: __init__.py  _original_code.py
reimpl_a_gn/dataset/synthetic_nerf_dataset/: __init__.py  _original_code.py  loader.py  wrapper.py
reimpl_a_gn/kans/: simple_kan.py
reimpl_a_gn/threed/: __init__.py  bts.py  camera.py  coord_utils.py  nerf.py  plotting.py  random.py  rendering.py  training.py  unet.py
reimpl_a_gn/threed/nerf/: __init__.py  nerf.py  training.py
reimpl_a_gn/threed/visualization/: __init__.py  camera_visualization.py  export_array.py  nerf_visualization.py  nerf_visualizer.py  ray_visualization.py  visualization_utils.py
reimpl_a_gn/transformers/: __init__.py  self_attention.py
reimpl_a_gn/voxels/: render.py
scripts/: debugging.ipynb  exp.ipynb  nnx.py  sampling.py  single_flower_rendering.py  test_train_nerf.py
src/: import jax.py
src/reimpl_a_gn/dataset/gis/: read_data.py
src/reimpl_a_gn/voxels/: bts.py  modules.py  render.py  unet.py
src/voxels/: bts.py  modules.py  render.py  renderer.py  unet.py
test/: test_camera.py  test_camera_matrices.py  test_camera_transforms.py  test_homogeneous_coords.py  test_nerf.py  test_positional_encoding.py  test_random.py  test_ray_sampling.py  test_render_integration.py  test_rendering.py  test_synthetic_nerf_dataset.py  test_unet.py
