[tool.poetry]
name = "3d-reimpl"
version = "0.1.0"
description = "Implementations of 3D reconstruction methods."
authors = ["Arno Gobbin <a-gn-pub@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.1"
wheel = "^0.44.0"
pytest = {version = "^8.3.2", extras = ["dev"]}
pre-commit = {version = "^3.8.0", extras = ["dev"]}
flax = "^0.8.5"
black = {version = "^24.8.0", extras = ["dev"]}
ruff = {version = "^0.6.0", extras = ["dev"]}
isort = {version = "^5.13.2", extras = ["dev"]}
jax = "^0.4.31"
jaxlib = "^0.4.31"
matplotlib = "^3.9.2"
jax-metal = "^0.1.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "test",
]
