[project]
name = "reimpl_a_gn"
version = "0.1.0"
description = "Implementations of 3D reconstruction methods."
authors = [
    {name = "Arno Gobbin", email = "a-gn-pub@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.0.1",
    "wheel>=0.44.0",
    "flax>=0.8.5",
    "jax>=0.4.38",
    "jax[cuda12]>=0.4.38 ; sys_platform == 'linux'",  # don't install CUDA on macOS
    "jaxlib>=0.4.31",
    "matplotlib>=3.9.2",
    "optax>=0.2.3",
    "imageio>=2.35.1",
    "kagglehub>=0.3.6",
    "requests>=2.32.3",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "test",
]
pythonpath = [
    ".",
]
