[project]
name = "reimpl_a_gn"
version = "0.1.0"
description = "Implementations of 3D reconstruction methods."
authors = [
    {name = "Arno Gobbin", email = "a-gn-pub@outlook.com"},
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.0.1",
    "wheel>=0.44.0",
    "flax>=0.8.5",
    "jax>=0.4.38",
    "jax[cuda12]>=0.4.38 ; sys_platform == 'linux'", # don't install CUDA on macOS
    "jaxlib>=0.4.31",
    "matplotlib>=3.9.2",
    "optax>=0.2.3",
    "imageio>=2.35.1",
    "kagglehub>=0.3.6",
    "requests>=2.32.3",
    "jupyter>=1.1.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "nbstripout>=0.8.1",
    "pyright>=1.1.405",
]
external = [
    "datasets>=4.7.0",
    "transformers>=5.3.0",
    "einops>=0.8.2",
    "huggingface-hub>=1.7.1",
    "peft>=0.18.1",
    "wandb>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "test",
]
pythonpath = [
    ".",
]

[tool.pyright]
include = ["reimpl_a_gn", "test"]
exclude = ["external/**"]
reportMissingImports = true
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportArgumentType = false
reportAttributeAccessIssue = false
reportReturnType = false
reportPossiblyUnboundVariable = false
reportGeneralTypeIssues = false
reportUnusedImport = true
pythonVersion = "3.13"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = ["external/**"]
